--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,15 @@ body  {
   margin: 0;
   padding: 0;
   height: 100vh;
+  --darkmode-background:  #2F2F2F;
+  --lightmode-background: #FFBC3A;
+  --darkmode-elements: #BA8AF9;
+  background-color: var(--lightmode-background);
 }
 
 body > div {
-  --darkmode-background:  #2F2F2F;
-  --lightmode-background: #FFBC3A;
-  /* --darkmode-background: #292929; */
-  --darkmode-elements: #BA8AF9;
-  background-color: var(--lightmode-background);
+  display: flex;
+  justify-content: space-between;
   height: 100%;
   width:100%;
 }
@@ -25,17 +26,21 @@ a[data-dark] {
   color: var(--darkmode-elements);
 }
 
-/* Darkmode - don't show images */
-img[data-light] {
+/* body > div > aside:nth-child(3) > img:nth-child(1) */
+
+body:target div[data-dark] {
+  /* display: block; */
+}
+
+div[data-light] {
   display: none;
 }
 
-/* main > img[data-light]{
-  display: block;
-} */
+img[src^="images/darkmode"] {
+  display: none;
+}
 
-/* Darkmode set background */
-body:target > div {
+body:target {
   background-color: var(--darkmode-background);
 }
 
@@ -43,9 +48,6 @@ body:target a[data-dark] {
   display: none;
 }
 
-body:target main > img {
-  display: none;
-}
 
 body:target aside > img {
   display: none;
@@ -53,6 +55,10 @@ body:target aside > img {
 
 body:target aside > a > img {
   display: none;
+}
+/* JA MAN */
+aside > a > img[data-dark], aside > img[data-dark] {
+  display: block;
 }
 
 body:target a[data-light] {
@@ -64,18 +70,36 @@ body:target img[data-light]{
   display: block;
 }
 
+body:target footer > img {
+  display: none;
+}
+
+body:target footer > img[data-light] {
+  display: block;
+  filter: saturate(3) drop-shadow(8px 4px 6px black);
+}
+
 /* All images(items) should have the same size by default */
-body > div > main > img {
+body > div > main > div > img {
   width: 6em;
   height: 6em;
 }
 
-body > div > header {
-  position: fixed;
-  top: 10%;
-  left: 40%;
+/* -------------------- Header -------------------------- */
+
+body > header {
   text-align: center;
-  animation: spinningHeader 3s ease-in-out infinite;
+  /* animation: spinningHeader 3s ease-in-out infinite; */
+  display: flex;
+}
+
+body > header nav {
+  flex: 1;
+}
+
+body > header div {
+  flex: 3;
+  animation: spinningHeader 3s ease-in-out infinite backwards;
 }
 
 @keyframes spinningHeader {
@@ -96,96 +120,101 @@ body > div > header {
   }
 }
 
-body > div > header > h1 {
+body > header > div > h1 {
   margin: 0;
   color: #A93028;
   text-shadow: 2px 2px #583D34;
   font-size: 3em;
   font-family: 'Fredoka One', cursive;
   text-transform: uppercase;
+  /* animation: SpecialSpinningHeader 3s ease-in-out infinite forwards alternate; */
 }
 
-body > div > header > p {
+/* @keyframes SpecialSpinningHeader {
+  0% {
+    transform: rotateY(0);
+  }
+  25% {
+    transform: rotateY(180deg);
+  }
+  50% {
+    transform: rotateY(270deg);
+  }
+  75% {
+    transform: rotateY(360deg);
+  }
+  100% {
+    transform: rotateY(0);
+    color: var(--lightmode-background);
+  }
+} */
+
+body > header > div > p {
   font-family: 'Krona One', sans-serif;
   margin-top: 0;
   margin-bottom: 0;
 }
+
+/* -------------------- Header -------------------------- */
 
 aside > img, aside > a > img {
   width: 10em;
   height: 10em;
 }
 
-/* Knife tool */
-body > div > aside:nth-child(3) > a:nth-child(1) > img {
-  position: fixed;
-  top: 20%;
-  left: -2.5em;
+body > div > aside:nth-child(2) {
+  order: 1;
 }
 
+body > div > aside:nth-child(3) {
+  order: 3;
+}
+
+/* #darkmode > div:nth-child(2) > aside:nth-child(2) > a:nth-child(1) > img:nth-child(2) */
 /* Knife tool turn on hover */
-body > div > aside:nth-child(3) > a:nth-child(1) > img:hover {
+body > div > aside:nth-child(2) > a:nth-child(1) > img:hover {
   transform: rotate(-20deg);
 }
 
 html:target > body {
   cursor: url('../images/knife.png'), auto;
-  /* cursor: url('../images/darkmode/darkmode_knife.png'), auto; */
+}
+
+html:target > body:active {
+  cursor: url('../images/knifed.png'), auto;
 }
 
 head:target ~ body {
   cursor: url('../images/hammer.png'), auto;
 }
 
-
-
-/* Hammer tool */
-body > div > aside:nth-child(3) > a:nth-child(2) > img{
-  position: fixed;
-  top: 50%;
-  left: -2.5em;
+head:target ~ body:active {
+  cursor: url('../images/hammered.png'), auto;
 }
 
 /* Hammer tool turn on hover */
-body > div > aside:nth-child(3) > a:nth-child(2) > img:hover {
+body > div > aside:nth-child(2) > a:nth-child(2) > img:hover {
   transform: rotate(-20deg);
-}
-
-/* Ketchup */
-/* Ketchup darkmode */
-body > div > aside:nth-child(6) > img:nth-child(1), body > div > aside:nth-child(6) > img:nth-child(2) {
-  position: fixed;
-  top: 20%;
-  right: -2.5em;
 }
 
 /* Ketchup turn on hover */
 /* Ketchup turn on hover darkmode */
-body > div > aside:nth-child(6) > img:nth-child(1):hover, body > div > aside:nth-child(6) > img:nth-child(2):hover {
+body > div > aside:nth-child(3) > img:nth-child(1):hover, body > div > aside:nth-child(3) > img:nth-child(2):hover {
   transform: rotate(-20deg);
-}
-
-/* Mayonnaise */
-/* Mayonnaise darkmode */
-body > div > aside:nth-child(6) > img:nth-child(3), body > div > aside:nth-child(6) > img:nth-child(4) {
-  position: fixed;
-  top: 50%;
-  right: -2.5em;
 }
 
 /* Mayonnaise  turn on hover */
 /* Mayonnaise  turn on hover darkmode */
-body > div > aside:nth-child(6) > img:nth-child(3):hover, body > div > aside:nth-child(6) > img:nth-child(4):hover {
+body > div > aside:nth-child(3) > img:nth-child(3):hover, body > div > aside:nth-child(3) > img:nth-child(4):hover {
   transform: rotate(-20deg);
 }
 
-
 /* Floating burger */
 /* Darkmode burger */
-body > div > main > img:nth-child(1), body > div > main > img:nth-child(2) {
-  position: fixed;
+body > div > main > div:nth-child(1) > img, body > div > main > div:nth-child(2) > img {
+  /* position: fixed;
   top: 10%;
-  left: 20%;
+  left: 20%; */
   animation: floatBurger 2s ease-in-out infinite;
 }
 
@@ -201,17 +230,10 @@ body > div > main > img:nth-child(1), body > div > main > img:nth-child(2) {
 	}
 }
 
-
 /* Floating fries */
 /* Darkmode fries */
-body > div > main > img:nth-child(3), body > div > main > img:nth-child(4) {
-  position: fixed;
-  top: 40%;
-  left: 20%;
-  animation-name: floatFries;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+body > div > main > div:nth-child(4) > img, body > div > main > div:nth-child(5) > img {
+  animation: floatFries 2s ease-in-out infinite;
 }
 
 @keyframes floatFries {
@@ -226,31 +248,11 @@ body > div > main > img:nth-child(3), body > div > main > img:nth-child(4) {
   }
 }
 
-/* Floating fries */
-body > div > main > img:nth-child(2):focus {
-  background-color: green;
-  animation: friesToBag 5s ease-in-out 1;
-}
-
-@keyframes friesToBag {
-  0%   {
-    transform: translateX(0);
-  }
-  50%  {
-    transform: translateX(300%);
-  }
-  100% {
-    transform: translate(300%, 300%);
-  }
-}
 
 /* Floating hotdog */
 /* Darkmode hotdog */
-body > div > main > img:nth-child(5), body > div > main > img:nth-child(6) {
-  position: fixed;
-  top: 40%;
-  right: 20%;
-  animation: floatHotdog 3s ease-in-out infinite;
+body > div > main > div:nth-child(7) > img, body > div > main > div:nth-child(8) > img {
+  animation: floatHotdog 2s ease-in-out infinite;
 }
 
 @keyframes floatHotdog {
@@ -267,10 +269,7 @@ body > div > main > img:nth-child(5), body > div > main > img:nth-child(6) {
 
 /* Floating chicken wing */
 /* Darkmode chicken wing */
-body > div > main > img:nth-child(7), body > div > main > img:nth-child(8) {
-  position: fixed;
-  top: 10%;
-  right: 20%;
+body > div > main > div:nth-child(10) > img, body > div > main > div:nth-child(11) > img {
   animation: floatChickenwing 2s ease-in-out infinite;
 }
 
@@ -286,11 +285,209 @@ body > div > main > img:nth-child(7), body > div > main > img:nth-child(8) {
   }
 }
 
+body > footer {
+  display: flex;
+  justify-content: center;
+}
+
 /* Footer */
-div > footer > img {
+body > footer > img {
   width: 10em;
   height: 10em;
-  position: fixed;
-  bottom: 0;
-  left: 45%;
+  /* h-shadow v-shadow blur */
+  filter:  saturate(3) drop-shadow(8px 4px 6px black);
+}
+
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  order: 2;
+  justify-content: center;
+  align-content: center;
+}
+
+main > div {
+  display: flex;
+  justify-content: center;
+  background-color: green;
+  /* width: 392px; */
+  width: 250px;
+  border: 1px solid black;
+}
+
+main > span > img {
+  display: inline-block;
+  position: relative;
+  left: -300px;
+  height: 1.5em;
+  width: 1.5em;
+  top: 1px;
+}
+
+svg {
+  width: 34%;
+}
+
+/* -------------------- Hot dog -------------------------- */
+
+/* .curry:hover */
+#HotDog:hover #move{
+  /* background-color: purple; */
+  animation: moveHotDog 0.5s ease-in-out 1;
+  /* animation: moveHotDog 0.5s ease-in 1; */
+}
+
+#HotDog:focus ~ #prijs3 {
+  display: block;
+  background-image: url("../images/bakje.png");
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 2;
+  top: 100%;
+  left: -35%;
+  background-size: 7em auto;
+  width: 7em;
+  text-decoration: underline overline;
+}
+
+#prijs3 p {
+  padding-left: 0.3em;
+}
+
+#HotDog {
+  animation: floatHotdog 1s steps(2, start) infinite;
+}
+
+#HotDog #broodje, #HotDog .worst {
+  fill: var(--lightmode-background);
+}
+
+@keyframes moveHotDog {
+  0% { transform: translateX(0);}
+  /* 50% { transform: translate(25%, -5%);} */
+  /* 100% { transform: translate(50%, -10%);} */
+  100% { transform: translateX(2px);}
+}
+
+/* -------------------- Hot dog -------------------------- */
+
+/* -------------------- Fries -------------------------- */
+
+#Fries:hover #fries_group {
+  animation: moveFries 0.5s ease-in-out 1;
+}
+
+#Fries {
+  animation-name: floatFries;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+#Fries:focus ~ #prijs2{
+  display: block;
+  background-image: url("../images/bakje.png");
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 2;
+  top: 100%;
+  left: -35%;
+  background-size: 7em auto;
+  width: 7em;
+  text-decoration: underline overline;
+}
+
+#prijs2 p {
+  padding-left: 0.3em;
+}
+
+#Fries path#bucket {
+  fill: var(--lightmode-background);
+}
+
+@keyframes moveFries {
+  0% { transform: translateY(0);}
+  100% { transform: translateY(-2px);}
+}
+
+/* -------------------- Fries -------------------------- */
+
+/* -------------------- Chicken wing -------------------------- */
+
+#Chicken_wing:hover #bone_group {
+  animation: moveChicken 0.5s ease-in-out 1;
+}
+
+#Chicken_wing:focus ~ #prijs4 {
+  display: block;
+  background-image: url("../images/bakje.png");
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 2;
+  top: 100%;
+  left: -35%;
+  background-size: 7em auto;
+  width: 7em;
+  text-decoration: underline overline;
+}
+
+#prijs4 p {
+  padding-left: 0.3em;
+}
+
+#Chicken_wing {
+  animation: floatChickenwing 3s ease-out infinite;
+}
+
+@keyframes moveChicken {
+  0% { transform: translateX(0);}
+  100% { transform: translateX(2px);}
+}
+
+/* -------------------- Chicken wing -------------------------- */
+
+/* -------------------- Burger -------------------------- */
+
+#burger:hover .movable {
+  animation: moveBread 0.5s ease-in-out 1;
+}
+
+#burger:focus polygon.cheese_1, #burger:focus ~ #prijs1 {
+  fill: var(--darkmode-elements);
+  background-image: url("../images/bakje.png");
+  background-repeat: no-repeat;
+  display: block;
+  position: relative;
+  z-index: 2;
+  top: 100%;
+  left: -35%;
+  /* top: 9em;
+  left: -5em;   */
+  background-size: 7em auto;
+  width: 7em;
+  text-decoration: underline overline;
+}
+
+#prijs1 p {
+  padding-left: 0.3em;
+}
+
+#burger {
+  animation: floatBurger 1s ease-in-out infinite;
+}
+
+#burger polygon.cheese_1 {
+  fill: var(--lightmode-background);
+}
+
+@keyframes moveBread {
+  0% { transform: translateY(0);}
+  100% { transform: translateY(-3px);}
+}
+
+/* -------------------- Burger -------------------------- */
+
+#prijs1, #prijs2, #prijs3, #prijs4 {
+  display: none;
 }
